wier/force-app/main/default/objects/Quotation__c/Quotation__c.object-meta.xml
<CustomObject>
    <label>Quotation</label>
    <nameField>
        <displayFormat>QID-{000000000}</displayFormat>
        <label>QuotationID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>