wier/force-app/main/default/objects/Quotation__c/fields/Comment_if_any__c.field-meta.xml
<CustomField>
    <fullName>Comment_if_any__c</fullName>
    <label>Comment if any</label>
    <type>TextArea</type>
</CustomField>