wier/force-app/main/default/objects/Quotation__c/fields/Comments_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comments_by_Sales__c</fullName>
    <label>Comments by Sales</label>
    <type>TextArea</type>
</CustomField>