wier/force-app/main/default/objects/Quotation__c/fields/Comments_by_Tendering_Manager__c.field-meta.xml
<CustomField>
    <fullName>Comments_by_Tendering_Manager__c</fullName>
    <label>Comments by Tendering Manager</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>