wier/force-app/main/default/objects/Quotation__c/fields/Competition_s_delivery_lead_time_weeks__c.field-meta.xml
<CustomField>
    <fullName>Competition_s_delivery_lead_time_weeks__c</fullName>
    <label>Competition&apos;s delivery lead time(weeks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>