wier/force-app/main/default/objects/Quotation__c/fields/Completion_price_better_by__c.field-meta.xml
<CustomField>
    <fullName>Completion_price_better_by__c</fullName>
    <label>Completion price better by(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>