wier/force-app/main/default/objects/Quotation__c/fields/COpportunity__c.field-meta.xml
<CustomField>
    <fullName>COpportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>COpportunity__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>