wier/force-app/main/default/objects/Quotation__c/fields/CostSheet__c.field-meta.xml
<CustomField>
    <fullName>CostSheet__c</fullName>
    <label>Cost Sheet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.COpportunity__c</field>
            <operation>equals</operation>
            <valueField>CostSheet__c.COpportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CostSheet__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>