wier/force-app/main/default/objects/Quotation__c/fields/Customer_feedback_on_quotation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Customer_feedback_on_quotation_Comment__c</fullName>
    <label>Comments by Tendering Rep</label>
    <type>TextArea</type>
</CustomField>