wier/force-app/main/default/objects/Quotation__c/fields/Customer_feedback_on_quotation_sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_feedback_on_quotation_sent__c</fullName>
    <label>Customer feedback on quotation sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Needs Changes/Clarification</fullName>
            </value>
            <value>
                <fullName>Opportunity lost</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>