wier/force-app/main/default/objects/Quotation__c/fields/Customer_Support_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Engineer_Email__c</fullName>
    <label>Customer Support Engineer Email</label>
    <type>Email</type>
</CustomField>