wier/force-app/main/default/objects/Quotation__c/fields/Final__c.field-meta.xml
<CustomField>
    <fullName>Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final</label>
    <type>Checkbox</type>
</CustomField>