wier/force-app/main/default/objects/Quotation__c/fields/Hos_Comments_on_opportunity_lost__c.field-meta.xml
<CustomField>
    <fullName>Hos_Comments_on_opportunity_lost__c</fullName>
    <description>Head of Sales comments on Opportunity</description>
    <label>HeadOfSales comment on opportunity lost</label>
    <type>TextArea</type>
</CustomField>