wier/force-app/main/default/objects/Quotation__c/fields/Movex_Co_No__c.field-meta.xml
<CustomField>
    <fullName>Movex_Co_No__c</fullName>
    <label>ERP CO No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>