wier/force-app/main/default/objects/Quotation__c/fields/Movex_quotation_docs_serial_no__c.field-meta.xml
<CustomField>
    <fullName>Movex_quotation_docs_serial_no__c</fullName>
    <description>Movex Quotation Reference</description>
    <label>Customer Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>