wier/force-app/main/default/objects/Quotation__c/fields/Opportunity_Selling_price_in_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Selling_price_in_Quotation__c</fullName>
    <formula>COpportunity__r.Selling_price_in_Quotation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Selling price in Quotation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>