wier/force-app/main/default/objects/Quotation__c/fields/OQ__c.field-meta.xml
<CustomField>
    <fullName>OQ__c</fullName>
    <formula>IF( Final__c ==TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Quoted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>