wier/force-app/main/default/objects/Quotation__c/fields/PO_received_from_customer__c.field-meta.xml
<CustomField>
    <fullName>PO_received_from_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO received from customer</label>
    <type>Checkbox</type>
</CustomField>