wier/force-app/main/default/objects/Quotation__c/fields/Quotation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Due_Date__c</fullName>
    <formula>COpportunity__r.Quotation_submittal_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quotation Due Date</label>
    <type>Date</type>
</CustomField>