wier/force-app/main/default/objects/Quotation__c/fields/Quotation_version__c.field-meta.xml
<CustomField>
    <fullName>Quotation_version__c</fullName>
    <label>Quotation version</label>
    <length>4</length>
    <type>Text</type>
</CustomField>