wier/force-app/main/default/objects/Quotation__c/fields/Quote_Submitted_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Quote_Submitted_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted quote to customer</label>
    <type>Checkbox</type>
</CustomField>