wier/force-app/main/default/objects/Quotation__c/fields/Reason_for_lost_quote__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_lost_quote__c</fullName>
    <label>Reason for lost quote (as per Tendering)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_feedback_on_quotation_sent__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Better priced by competition</fullName>
            </value>
            <value>
                <fullName>Competitor&apos;s better track record</fullName>
            </value>
            <value>
                <fullName>Competitor&apos;s relationship strength</fullName>
            </value>
            <value>
                <fullName>Customer didn&apos;t win the project</fullName>
            </value>
            <value>
                <fullName>Customer&apos;s preference for OEM</fullName>
            </value>
            <value>
                <fullName>Delivery lead time</fullName>
            </value>
            <value>
                <fullName>End-user cancelled the project</fullName>
            </value>
            <value>
                <fullName>Disagreement on terms / conditions</fullName>
            </value>
            <value>
                <fullName>Late quote</fullName>
            </value>
            <value>
                <fullName>Not qualified / registered with the customer</fullName>
            </value>
            <value>
                <fullName>Quote not matching customer specs</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>