wier/force-app/main/default/objects/Quotation__c/fields/Reason_for_lost_quote_as_per_CSR__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_lost_quote_as_per_CSR__c</fullName>
    <label>Reason for lost quote (as per Sales)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better priced by competition</fullName>
                <color>#0B6FCE</color>
                <label>Better priced by competition</label>
            </value>
            <value>
                <fullName>Competitor&apos;s better track record</fullName>
                <color>#78C953</color>
                <label>Competitor&apos;s better track record</label>
            </value>
            <value>
                <fullName>Competitor&apos;s relationship strength</fullName>
                <color>#E27001</color>
                <label>Competitor&apos;s relationship strength</label>
            </value>
            <value>
                <fullName>Customer didn&apos;t win the project</fullName>
                <color>#A845DC</color>
                <label>Customer didn&apos;t win the project</label>
            </value>
            <value>
                <fullName>Customer&apos;s preference for OEM</fullName>
                <color>#F3D904</color>
                <label>Customer&apos;s preference for OEM</label>
            </value>
            <value>
                <fullName>Delivery lead time</fullName>
                <color>#A53711</color>
                <label>Delivery lead time</label>
            </value>
            <value>
                <fullName>End-user cancelled the project</fullName>
                <color>#66E9BD</color>
                <label>End-user cancelled the project</label>
            </value>
            <value>
                <fullName>Disagreement on terms / conditions</fullName>
                <color>#0B24BE</color>
                <label>Disagreement on terms / conditions</label>
            </value>
            <value>
                <fullName>Late quote</fullName>
                <color>#419249</color>
                <label>Late quote</label>
            </value>
            <value>
                <fullName>Not qualified / registered with the customer</fullName>
                <color>#FF0000</color>
                <label>Not qualified / registered with the customer</label>
            </value>
            <value>
                <fullName>Quote not matching customer specs</fullName>
                <color>#000000</color>
                <label>Quote not matching customer specs</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <color>#F96FB7</color>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <color>#2F5D85</color>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>