wier/force-app/main/default/objects/Quotation__c/fields/Reasons_for_quotation_revision__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_quotation_revision__c</fullName>
    <label>Reasons for quotation revision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change of technical scope / specification by customer</fullName>
            </value>
            <value>
                <fullName>Errors / omissions - tendering</fullName>
            </value>
            <value>
                <fullName>Information / intelligence gap - sales</fullName>
            </value>
            <value>
                <fullName>Lead time revision</fullName>
            </value>
            <value>
                <fullName>Line item quantity revision</fullName>
            </value>
            <value>
                <fullName>P.O.  for partial items</fullName>
            </value>
            <value>
                <fullName>P.O. for additional items - customer request</fullName>
            </value>
            <value>
                <fullName>Payment terms revision</fullName>
            </value>
            <value>
                <fullName>Price revision</fullName>
            </value>
            <value>
                <fullName>Schedule change - customer request</fullName>
            </value>
            <value>
                <fullName>Schedule change - Weir initiated</fullName>
            </value>
            <value>
                <fullName>Supplier quote received with better price</fullName>
            </value>
            <value>
                <fullName>Terms and conditions revision</fullName>
            </value>
            <value>
                <fullName>Validity period revision</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>