wier/force-app/main/default/objects/Quotation__c/fields/Selling_price_as_per_CostSheet__c.field-meta.xml
<CustomField>
    <fullName>Selling_price_as_per_CostSheet__c</fullName>
    <formula>CostSheet__r.Cost_Sheet_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling price as per CostSheet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>