wier/force-app/main/default/objects/Quotation__c/fields/Selling_price_in_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Selling_price_in_Quotation__c</fullName>
    <formula>CostSheet__r.Sales_value_for_Quotation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling price in Quotation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>