wier/force-app/main/default/objects/Quotation__c/fields/Submit_for_review__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit for review</label>
    <type>Checkbox</type>
</CustomField>