wier/force-app/main/default/objects/Quotation__c/fields/Tendering_Manager_Review__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Manager_Review__c</fullName>
    <label>Tendering Manager Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requires Changes</fullName>
            </value>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>