wier/force-app/main/default/objects/Quotation__c/fields/Tendering_Representative__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Representative__c</fullName>
    <formula>COpportunity__r.Assign_Tendering_Representative__r.FirstName + &apos; &apos; + COpportunity__r.Assign_Tendering_Representative__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tendering Representative</label>
    <type>Text</type>
</CustomField>