wier/force-app/main/default/objects/Quotation__c/fields/TMEmail__c.field-meta.xml
<CustomField>
    <fullName>TMEmail__c</fullName>
    <label>TMEmail</label>
    <type>Email</type>
</CustomField>