wier/force-app/main/default/objects/Quotation__c/fields/TMEmailFormula__c.field-meta.xml
<CustomField>
    <fullName>TMEmailFormula__c</fullName>
    <formula>COpportunity__r.Tendering_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMEmailFormula</label>
    <type>Text</type>
</CustomField>