wier/force-app/main/default/objects/Quotation__c/fields/To_close_the_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>To_close_the_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To close the Opportunity</label>
    <type>Checkbox</type>
</CustomField>