wier/force-app/main/default/objects/Quotation__c/fields/TR_Email__c.field-meta.xml
<CustomField>
    <fullName>TR_Email__c</fullName>
    <label>TR Email</label>
    <type>Email</type>
</CustomField>