wier/force-app/main/default/objects/Quotation__c/fields/Triggerupdate__c.field-meta.xml
<CustomField>
    <fullName>Triggerupdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggerupdate</label>
    <type>Checkbox</type>
</CustomField>