wier/force-app/main/default/objects/Quotation__c/fields/Upsell_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Upsell_opportunity__c</fullName>
    <formula>COpportunity__r.Upsell_opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upsell opportunity (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>