wier/force-app/main/default/objects/Quotation__c/fields/VOO__c.field-meta.xml
<CustomField>
    <fullName>VOO__c</fullName>
    <formula>IF( Final__c ==TRUE, COpportunity__r.Value_for_pipeline__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value of Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>