wier/force-app/main/default/objects/Quotation__c/fields/VOQ__c.field-meta.xml
<CustomField>
    <fullName>VOQ__c</fullName>
    <formula>IF(  Final__c ==TRUE , Selling_price_as_per_CostSheet__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value of Quotes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>