wier/force-app/main/default/objects/Quotation__c/recordTypes/PO_Received.recordType-meta.xml
<RecordType>
    <fullName>PO_Received</fullName>
    <active>true</active>
    <label>PO Received</label>
</RecordType>