wier/force-app/main/default/objects/Quotation__c/recordTypes/Quotation_Final.recordType-meta.xml
<RecordType>
    <fullName>Quotation_Final</fullName>
    <active>true</active>
    <description>Quotation Final</description>
    <label>Quotation Final</label>
</RecordType>