wier/force-app/main/default/objects/Quotation__c/recordTypes/Quotation_submit_to_customer.recordType-meta.xml
<RecordType>
    <fullName>Quotation_submit_to_customer</fullName>
    <active>true</active>
    <description>Quotation submit to customer</description>
    <label>Quotation submit to customer</label>
</RecordType>