wier/force-app/main/default/objects/Quotation__c/recordTypes/Submit_Quote_before.recordType-meta.xml
<RecordType>
    <fullName>Submit_Quote_before</fullName>
    <active>true</active>
    <label>Submit Quote - before</label>
</RecordType>