wier/force-app/main/default/objects/Quotation__c/recordTypes/Submit_Quoted_After.recordType-meta.xml
<RecordType>
    <fullName>Submit_Quoted_After</fullName>
    <active>true</active>
    <label>Submit Quoted - After</label>
</RecordType>