wier/force-app/main/default/objects/Quotation__c/validationRules/Account_Status_is_Blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Status_is_Blocked</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(Text(  COpportunity__r.Customer__r.Account_Status__c  ) == &apos;Blocked&apos;,Text(  COpportunity__r.Customer__r.Account_Status__c  ) == &apos;InActive&apos;),IsNew(), False)</errorConditionFormula>
    <errorMessage>Account is Blocked</errorMessage>
</ValidationRule>