wier/force-app/main/default/objects/Quotation__c/validationRules/Comments_by_Tendering_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_by_Tendering_Manager</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Comments_by_Tendering_Manager__c )  &amp;&amp;  ISPICKVAL( Tendering_Manager_Review__c , &apos;Requires Changes&apos;)</errorConditionFormula>
    <errorDisplayField>Comments_by_Tendering_Manager__c</errorDisplayField>
    <errorMessage>Please enter the changes to be made</errorMessage>
</ValidationRule>