wier/force-app/main/default/objects/Quotation__c/validationRules/CSR_input_Valiation_before_make_final.validationRule-meta.xml
<ValidationRule>
    <fullName>CSR_input_Valiation_before_make_final</fullName>
    <active>true</active>
    <description>CSR input Validation before_make it as a final</description>
    <errorConditionFormula>IF(AND(OR( ISPICKVAL( COpportunity__r.CSRDecisionOnBid__c , &apos;&apos;),ISPICKVAL( COpportunity__r.Tendering_Manager_s_Decision_on_Bid__c , &apos;&apos;)),  Text( COpportunity__r.Business_Unit__c)  != &apos;Aberdeen&apos;, Final__c  == true ) , true, false)</errorConditionFormula>
    <errorMessage>Please wait until CSR or TM  will provide their Bid/No bid decision.</errorMessage>
</ValidationRule>