wier/force-app/main/default/objects/Quotation__c/validationRules/Customer_feedback_on_quotation_sent_vali.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_feedback_on_quotation_sent_vali</fullName>
    <active>true</active>
    <description>Customer_feedback_on_quotation_sent_vali</description>
    <errorConditionFormula>AND(Text( Customer_feedback_on_quotation_sent__c )=&quot;Opportunity lost&quot;, Text( Reason_for_lost_quote__c )==null )</errorConditionFormula>
    <errorDisplayField>Reason_for_lost_quote__c</errorDisplayField>
    <errorMessage>You must select  reason for lost Quote.</errorMessage>
</ValidationRule>