wier/force-app/main/default/objects/Quotation__c/validationRules/Delivery_Lead_Time_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Lead_Time_validation</fullName>
    <active>true</active>
    <description>Delivery_Lead_Time_validation</description>
    <errorConditionFormula>AND(TEXT( Reasons_for_opportunity_lost__c )=&quot;Delivery lead time&quot;, ISBLANK(  Competition_s_delivery_lead_time_weeks__c ) )</errorConditionFormula>
    <errorDisplayField>Completion_price_better_by__c</errorDisplayField>
    <errorMessage>Please provide Competition&apos;s delivery lead time.</errorMessage>
</ValidationRule>