wier/force-app/main/default/objects/Quotation__c/validationRules/Final_Quotation_Mandatory_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Quotation_Mandatory_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Final__c = FALSE ,  ISPICKVAL( Tendering_Manager_Review__c ,&quot;Submit for Approval&quot;), $Profile.Name=&apos;Tendering Manager - Abu Dhabi&apos;, $Profile.Name=&apos;TM &amp; Planning - Abu Dhabi&apos;)</errorConditionFormula>
    <errorDisplayField>Final__c</errorDisplayField>
    <errorMessage>Please select Final before submitting for approval</errorMessage>
</ValidationRule>