wier/force-app/main/default/objects/Quotation__c/validationRules/Submit_For_Review_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_For_Review_Validation</fullName>
    <active>true</active>
    <description>Submit_For_Review_Validation</description>
    <errorConditionFormula>Submit_for_review__c == FALSE</errorConditionFormula>
    <errorDisplayField>Comment_if_any__c</errorDisplayField>
    <errorMessage>You must select the Submit for Review checkbox.</errorMessage>
</ValidationRule>